--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="/public/assets/css/styles.css" rel="stylesheet">
 </head>
 
 <body>
     <main>
-        <div class="border-bottom mb-4">
+        <div class="border-bottom mb-2">
             <div class="container">
                 <header class="d-flex flex-wrap justify-content-center align-items-center py-3">
                     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -37,7 +38,7 @@
                                 Produtos
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="vendas_realizadas.html">Estoque</a></li>
+                                <li><a class="dropdown-item" href="produtos.html">Estoque</a></li>
                                 <li><a class="dropdown-item" href="nova_venda.html">Categorias</a></li>
                             </ul>
                         </li>
