feat: template categorias

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="produtos.html">Estoque</a></li>
-                                <li><a class="dropdown-item" href="nova_venda.html">Categorias</a></li>
+                                <li><a class="dropdown-item" href="categorias.html">Categorias</a></li>
                             </ul>
                         </li>
                         <li class="nav-item"><a href="#" class="btn btn-outline-danger m-0 ms-4" aria-current="page">Sair</a></li>
