--- a/categorias.html
+++ b/categorias.html
@@ -25,7 +25,8 @@
           <ul class="nav nav-pills d-flex align-items-center">
             <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Início</a></li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 Vendas
               </a>
               <ul class="dropdown-menu">
@@ -34,11 +35,12 @@
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 Produtos
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item active" href="produtos.html">Estoque</a></li>
+                <li><a class="dropdown-item" href="produtos.html">Estoque</a></li>
                 <li><a class="dropdown-item" href="categorias.html">Categorias</a></li>
               </ul>
             </li>
@@ -49,49 +51,26 @@
     </div>
 
     <div class="container py-5">
-      <div class="mb-4">
-        <h1>Produtos</h1>
+      <div class="mb-4 d-flex flex-row justify-content-between">
+        <h1>Categorias</h1>
+        <div>
+          <a href="nova_categoria.html" class="btn btn-primary"><i class="bi bi-plus"></i>Nova categoria</a>
+        </div>
       </div>
 
       <table class="table table-striped table-hover">
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-            <th scope="col-2 text-align-right">Actions</th>
+            <th scope="col">Id</th>
+            <th scope="col">Nome</th>
+            <th scope="col-1 text-align-right">Actions</th>
           </tr>
         </thead>
         <tbody>
           <tr>
             <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-            <td class="col-2 text-align-right">
-              <button class="btn btn-primary btn-sm"><i class="bi bi-plus"></i></button>
-              <button class="btn btn-secondary btn-sm"><i class="bi bi-pencil"></i></button>
-              <button class="btn btn-danger btn-sm"><i class="bi bi-x"></i></button>
-            </td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-            <td class="col-2 text-align-right">
-              <button class="btn btn-primary btn-sm"><i class="bi bi-plus"></i></button>
-              <button class="btn btn-secondary btn-sm"><i class="bi bi-pencil"></i></button>
-              <button class="btn btn-danger btn-sm"><i class="bi bi-x"></i></button>
-            </td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
-            <td class="col-2 text-align-right">
-              <button class="btn btn-primary btn-sm"><i class="bi bi-plus"></i></button>
+            <td>Informática</td>
+            <td class="col-1 text-align-right">
               <button class="btn btn-secondary btn-sm"><i class="bi bi-pencil"></i></button>
               <button class="btn btn-danger btn-sm"><i class="bi bi-x"></i></button>
             </td>
@@ -102,7 +81,8 @@
     </div>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
