--- a/nova_categoria.html
+++ b/nova_categoria.html
@@ -38,8 +38,8 @@
                 Produtos
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item active" href="produtos.html">Estoque</a></li>
-                <li><a class="dropdown-item" href="categorias.html">Categorias</a></li>
+                <li><a class="dropdown-item" href="produtos.html">Estoque</a></li>
+                <li><a class="dropdown-item active" href="categorias.html">Categorias</a></li>
               </ul>
             </li>
             <li class="nav-item"><a href="#" class="btn btn-outline-danger m-0 ms-4" aria-current="page">Sair</a></li>
@@ -50,55 +50,22 @@
 
     <div class="container py-5">
       <div class="mb-4">
-        <h1>Produtos</h1>
+        <h1>Nova categoria</h1>
       </div>
 
-      <table class="table table-striped table-hover">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-            <th scope="col-2 text-align-right">Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-            <td class="col-2 text-align-right">
-              <button class="btn btn-primary btn-sm"><i class="bi bi-plus"></i></button>
-              <button class="btn btn-secondary btn-sm"><i class="bi bi-pencil"></i></button>
-              <button class="btn btn-danger btn-sm"><i class="bi bi-x"></i></button>
-            </td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-            <td class="col-2 text-align-right">
-              <button class="btn btn-primary btn-sm"><i class="bi bi-plus"></i></button>
-              <button class="btn btn-secondary btn-sm"><i class="bi bi-pencil"></i></button>
-              <button class="btn btn-danger btn-sm"><i class="bi bi-x"></i></button>
-            </td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
-            <td class="col-2 text-align-right">
-              <button class="btn btn-primary btn-sm"><i class="bi bi-plus"></i></button>
-              <button class="btn btn-secondary btn-sm"><i class="bi bi-pencil"></i></button>
-              <button class="btn btn-danger btn-sm"><i class="bi bi-x"></i></button>
-            </td>
-          </tr>
-        </tbody>
-
-      </table>
+      <div class="w-50 mt-2">
+        <form>
+          <div class="mb-3">
+            <label for="id" class="form-label">Id: </label>
+            <input type="email" class="form-control" id="id" disabled value="0">
+          </div>
+          <div class="mb-3">
+            <label for="nome" class="form-label">Nome</label>
+            <input type="text" class="form-control" id="nome">
+          </div>
+          <button type="submit" class="btn btn-primary">Salvar</button>
+        </form>
+      </div>
     </div>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
