--- a/novo_produto.html
+++ b/novo_produto.html
@@ -38,8 +38,8 @@
                 Produtos
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item active" href="produtos.html">Estoque</a></li>
-                <li><a class="dropdown-item" href="categorias.html">Categorias</a></li>
+                <li><a class="dropdown-item" href="produtos.html">Estoque</a></li>
+                <li><a class="dropdown-item active" href="categorias.html">Categorias</a></li>
               </ul>
             </li>
             <li class="nav-item"><a href="#" class="btn btn-outline-danger m-0 ms-4" aria-current="page">Sair</a></li>
@@ -49,42 +49,40 @@
     </div>
 
     <div class="container py-5">
-      <div class="mb-4 d-flex flex-row justify-content-between">
-        <h1>Produtos</h1>
-        <div>
-          <a href="novo_produto.html" class="btn btn-primary"><i class="bi bi-plus"></i>Novo produto</a>
-        </div>
+      <div class="mb-4">
+        <h1>Novo produto</h1>
       </div>
 
-      <table class="table table-striped table-hover">
-        <thead>
-          <tr>
-            <th scope="col">id</th>
-            <th scope="col">Nome</th>
-            <th scope="col">Descrição</th>
-            <th scope="col">Categoria Id</th>
-            <th scope="col">Valor</th>
-            <th scope="col">Qtd. Disponível</th>
-            <th scope="col-2 text-align-right">Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>nome</td>
-            <td>descrição</td>
-            <td>categoria id</td>
-            <td>R$ 398,00</td>
-            <td>2</td>
-            <td class="col-2 text-align-right">
-              <button class="btn btn-primary btn-sm"><i class="bi bi-plus"></i></button>
-              <button class="btn btn-secondary btn-sm"><i class="bi bi-pencil"></i></button>
-              <button class="btn btn-danger btn-sm"><i class="bi bi-x"></i></button>
-            </td>
-          </tr>
-        </tbody>
+      <div class="w-50 mt-2">
+        <form>
+          <div class="mb-3">
+            <label for="nome" class="form-label">Nome:</label>
+            <input type="text" class="form-control" id="nome" name="nome">
+          </div>
+          <div class="mb-3">
+            <label for="descricao" class="form-label">Descrição:</label>
+            <textarea class="form-control" id="descricao" name="descricao" style="resize:none;" rows="5"></textarea>
+          </div>
 
-      </table>
+
+          <div class="row">
+            <div class="mb-3 col-4">
+              <label for="categoriaId" class="form-label">Categoria Id:</label>
+              <input type="number" class="form-control" id="categoriaId" name="categoriaId">
+            </div>
+            <div class="mb-3 col-4">
+              <label for="quantidade" class="form-label">Quantidade:</label>
+              <input type="number" class="form-control" id="quantidade" name="quantidade">
+            </div>
+            <div class="mb-3 col-4">
+              <label for="valor" class="form-label">Valor:</label>
+              <input type="text" class="form-control" id="valor" name="valor">
+            </div>
+          </div>
+
+          <button type="submit" class="btn btn-primary">Salvar</button>
+        </form>
+      </div>
     </div>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
