--- a/produtos.html
+++ b/produtos.html
@@ -80,6 +80,7 @@
               <button class="btn btn-primary btn-sm"><i class="bi bi-plus"></i></button>
               <button class="btn btn-secondary btn-sm"><i class="bi bi-pencil"></i></button>
               <button class="btn btn-danger btn-sm"><i class="bi bi-x"></i></button>
+              <a href="/produtos/vender" class="btn btn-primary btn-sm">Vender</a>
             </td>
           </tr>
         </tbody>
